<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_order_message"
        android:title="@string/action_order_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_status_message"
        android:title="@string/action_status_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites_message"
        android:title="@string/action_favorites_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact_message"
        android:title="@string/action_contact_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:title="@string/GoTo_action_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/GoToContextMenu"
        android:title="@string/GoToContextMenu"
        app:showAsAction="never" />

</menu>
    